Fixed the collapse function in the navigationbar when viewed in mobile viewport

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,12 +30,12 @@
 
 /* ----------------------------------------------------------------------------Navigation Bar */
 
-
 .navbar-collapse a {
     color: white;
     text-transform: uppercase; 
     text-decoration: none;
     font-size: 30px;
+    letter-spacing: 2px;
 }
 
 
